--- a/html/src/components/blocks/BrandsSection/BrandsSection.css
+++ b/html/src/components/blocks/BrandsSection/BrandsSection.css
@@ -1,15 +1,15 @@
 .brands-section {
-    padding-top: 104px;
-    padding-bottom: 104px;
-    margin-top: 104px;
-    margin-bottom: 104px;
+    padding-top: calc(var(--gs) * 13);
+    padding-bottom: calc(var(--gs) * 13);
+    margin-top: calc(var(--gs) * 13);
+    margin-bottom: calc(var(--gs) * 13);
     background-color: var(--cl-elem-grey);
 
     @media (--tablet-lg) {
-        padding-top: 32px;
-        padding-bottom: 32px;
-        margin-top: 32px;
-        margin-bottom: 32px;
+        padding-top: calc(var(--gs) * 4);
+        padding-bottom: calc(var(--gs) * 4);
+        margin-top: calc(var(--gs) * 4);
+        margin-bottom: calc(var(--gs) * 4);
     }
 
     @media (--tablet) {
@@ -30,6 +30,7 @@
             line-height: 32px;
             padding: 0;
             text-align: center;
+            margin-bottom: calc(var(--gs) * 3);
         }
     }
 
@@ -37,10 +38,6 @@
         padding: 0 calc(var(--gs) * 13.5);
 
         @media (--tablet-lg) {
-            padding: 0 calc(var(--gs) * 11.75);
-        }
-
-        @media (--tablet) {
             padding: 0;
         }
     }
